# mrklar

./: .dockerignore  .gitignore  Cargo.toml  NOTES.md  README.md
crates/common/: Cargo.toml  build.rs
crates/common/proto/: mrklar.v1.proto
crates/common/src/: config.rs  error.rs  lib.rs  merkle_proof.rs
crates/fs/: Cargo.toml
crates/fs/src/: error.rs  lib.rs
crates/mrklar/: Cargo.toml
crates/mrklar-api/: Cargo.toml
crates/mrklar-api/src/: error.rs  lib.rs
crates/mrklar-cli/: Cargo.toml
crates/mrklar-cli/src/: mrklar_cli.rs
crates/mrklar/src/: cmd.rs  config.rs  error.rs  file_service.rs  lib.rs  mem_db.rs  mrklar.rs  node.rs
crates/mrklar/tests/: mrklar.rs
crates/tree/: Cargo.toml
crates/tree/src/: error.rs  lib.rs  merkle_tree.rs  pow2.rs
docker/compose/: Dockerfile  docker-compose.yml
docker/images/: Dockerfile.debug  Dockerfile.release  build-all.sh  build-debug.sh  build-release.sh
scripts/: cli_download.sh  cli_upload.sh  server.sh
testing/: Cargo.toml
testing/src/: lib.rs
tests-data/files/: 4  5
