[workspace.package]
version = "0.1.0"
edition = "2021"
rust-version = "1.79"
license = "MIT"
homepage = "https://github.com/0xalexbel/mrklar"
repository = "https://github.com/0xalexbel/mrklar"
authors = ["Alexandre BELHOSTE"]

[workspace]
members = [
    "crates/common/",
    "crates/fs/",
    "crates/tree/",
    "crates/mrklar-api/",
    "crates/mrklar-cli/",
    "crates/mrklar/",
    "testing/",
]
resolver = "2"

[workspace.dependencies]
mrklar-common = { path = "crates/common" }
mrklar-fs = { path = "crates/fs" }
mrklar-api = { path = "crates/mrklar-api" }
mrklar-tree = { path = "crates/tree" }
mrklar = { path = "crates/mrklar" }
mrklar-cli = { path = "crates/mrklar-cli" }

async-stream = "0.2"
bincode = "1.3.3"
eyre = "0.6"
hex = "0.4"
parking_lot = "0.12"
prost = "0.13"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
rand = "0.8"
sha2 = "0.10.8"
tempfile = "3"
thiserror = "1"
tonic = "0.12"
tokio = { version = "1.0", features = ["rt-multi-thread", "fs", "macros", "sync", "time", "signal"] }
tokio-stream = "0.1"
tracing = "0.1"
tracing-subscriber = "0.3"
url = "2.3"