[package]
name = "mrklar-common"
authors.workspace = true
edition.workspace = true
homepage.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
version.workspace = true

[dependencies]
bincode.workspace = true
hex.workspace = true
prost.workspace = true
serde.workspace = true
sha2.workspace = true
thiserror.workspace = true
tonic.workspace = true
url.workspace = true

[build-dependencies]
tonic-build = "0.12"
